# Zero-Contracts

./: README.md  history_log.txt
contracts/orchestrator/src/: lib.rs
vzero-contracts/: Cargo.toml
vzero-contracts/contracts/audit-registry/: Cargo.toml
vzero-contracts/contracts/audit-registry/src/: lib.rs
vzero-contracts/contracts/orchestrator/: Cargo.toml
vzero-contracts/contracts/orchestrator/src/: lib.rs
vzero_temp_build/: .rustc_info.json
vzero_temp_build/release/.fingerprint/block-buffer-4588f7b2a82bf7b3/: lib-block_buffer  lib-block_buffer.json
vzero_temp_build/release/.fingerprint/bytes-lit-be960f4d706cf594/: lib-bytes_lit  lib-bytes_lit.json
vzero_temp_build/release/.fingerprint/crate-git-revision-5bb43a5738efd35b/: lib-crate_git_revision  lib-crate_git_revision.json
vzero_temp_build/release/.fingerprint/crypto-common-5d48807bfd47082b/: lib-crypto_common  lib-crypto_common.json
vzero_temp_build/release/.fingerprint/darling-dfad09f4732b6d6c/: lib-darling  lib-darling.json
vzero_temp_build/release/.fingerprint/darling-fc1031424c573179/: lib-darling  lib-darling.json
vzero_temp_build/release/.fingerprint/darling_core-1adc366930f0e26d/: lib-darling_core  lib-darling_core.json
vzero_temp_build/release/.fingerprint/darling_core-dccb3e71bf2ed63c/: lib-darling_core  lib-darling_core.json
vzero_temp_build/release/.fingerprint/darling_macro-26ba017773f8ed97/: lib-darling_macro  lib-darling_macro.json
vzero_temp_build/release/.fingerprint/hex-ee0092df39d49084/: lib-hex  (+1 more)
vzero_temp_build/wasm32-unknown-unknown/release/: audit_registry.wasm
(+117 files in other folders)
